chore: reformat suggestion api response
