# backend/docs/swagger.yaml
@@ -2,17 +2,61 @@ basePath: /api/v1
 definitions:
   dto.AccommodationSuggestion:
     properties:
-      hotels:
+      accommodation_id:
+        type: string
+      address:
+        type: string
+      amenities:
+        type: string
+      booking_link:
+        type: string
+      description:
+        type: string
+      destination_id:
+        type: string
+      image_url:
+        type: string
+      name:
+        type: string
+      star_rating:
+        type: number
+      type:
+        type: string
+    type: object
+  dto.AccommodationsSuggestion:
+    properties:
+      accommodations:
         items:
-          $ref: '#/definitions/model.Accommodation'
+          $ref: '#/definitions/dto.AccommodationSuggestion'
         type: array
     type: object
   dto.ActivitiesSuggestion:
     properties:
       activities:
         items:
-          $ref: '#/definitions/model.Activity'
+          $ref: '#/definitions/dto.ActivitySuggestion'
         type: array
+    type: object
+  dto.ActivitySuggestion:
+    properties:
+      activity_id:
+        type: string
+      category_id:
+        type: string
+      cost:
+        type: number
+      description:
+        type: string
+      destination_id:
+        type: string
+      duration:
+        type: integer
+      image_url:
+        type: string
+      name:
+        type: string
+      place_id:
+        type: string
     type: object
   dto.LoginRequest:
     properties:
@@ -36,9 +80,34 @@ definitions:
     type: object
   dto.RestaurantSuggestion:
     properties:
+      address:
+        type: string
+      avg_rating:
+        type: number
+      cuisine_type:
+        type: string
+      description:
+        type: string
+      destination_id:
+        type: string
+      establishment_type:
+        type: string
+      image_url:
+        type: string
+      name:
+        type: string
+      opening_hours:
+        type: string
+      price_range:
+        type: string
+      restaurant_id:
+        type: string
+    type: object
+  dto.RestaurantsSuggestion:
+    properties:
       restaurants:
         items:
-          $ref: '#/definitions/model.Restaurant'
+          $ref: '#/definitions/dto.RestaurantSuggestion'
         type: array
     type: object
   dto.TodoCreate:
@@ -91,198 +160,10 @@ definitions:
       travel_style:
         type: string
     type: object
-  model.Accommodation:
-    properties:
-      accommodation_id:
-        type: string
-      address:
-        type: string
-      amenities:
-        type: string
-      booking_link:
-        type: string
-      description:
-        type: string
-      destination_id:
-        type: string
-      image_url:
-        type: string
-      name:
-        type: string
-      star_rating:
-        type: number
-      type:
-        type: string
-    type: object
-  model.Activity:
-    properties:
-      activity_id:
-        type: string
-      category:
-        $ref: '#/definitions/model.ActivityCategory'
-      category_id:
-        type: string
-      cost:
-        type: number
-      description:
-        type: string
-      destination:
-        $ref: '#/definitions/model.Destination'
-      destination_id:
-        type: string
-      duration:
-        type: integer
-      image_url:
-        type: string
-      name:
-        type: string
-      place:
-        $ref: '#/definitions/model.Place'
-      place_id:
-        type: string
-    type: object
-  model.ActivityCategory:
-    properties:
-      activities:
-        items:
-          $ref: '#/definitions/model.Activity'
-        type: array
-      category_id:
-        type: string
-      category_name:
-        type: string
-      description:
-        type: string
-    type: object
-  model.Destination:
-    properties:
-      accommodations:
-        items:
-          $ref: '#/definitions/model.Accommodation'
-        type: array
-      activities:
-        items:
-          $ref: '#/definitions/model.Activity'
-        type: array
-      best_season:
-        type: string
-      city:
-        type: string
-      climate:
-        type: string
-      description:
-        type: string
-      destination_id:
-        type: string
-      image_url:
-        type: string
-      name:
-        type: string
-      places:
-        items:
-          $ref: '#/definitions/model.Place'
-        type: array
-      restaurants:
-        items:
-          $ref: '#/definitions/model.Restaurant'
-        type: array
-    type: object
-  model.Place:
-    properties:
-      activities:
-        items:
-          $ref: '#/definitions/model.Activity'
-        type: array
-      address:
-        type: string
-      avg_visit_duration:
-        type: integer
-      description:
-        type: string
-      destination:
-        $ref: '#/definitions/model.Destination'
-      destination_id:
-        type: string
-      entrance_fee:
-        type: number
-      image_url:
-        type: string
-      name:
-        type: string
-      opening_hours:
-        type: string
-      place_id:
-        type: string
-      place_type:
-        type: string
-      popularity_score:
-        type: number
-    type: object
   model.Response:
     properties:
       data: {}
       message:
-        type: string
-    type: object
-  model.Restaurant:
-    properties:
-      address:
-        type: string
-      avg_rating:
-        type: number
-      cuisine_type:
-        type: string
-      description:
-        type: string
-      destination:
-        $ref: '#/definitions/model.Destination'
-      destination_id:
-        description: FK referencing destinations table
-        type: string
-      establishment_type:
-        type: string
-      foods:
-        items:
-          $ref: '#/definitions/model.RestaurantFood'
-        type: array
-      image_url:
-        type: string
-      name:
-        type: string
-      opening_hours:
-        type: string
-      price_range:
-        type: string
-      restaurant_id:
-        type: string
-    type: object
-  model.RestaurantFood:
-    properties:
-      cuisine:
-        type: string
-      description:
-        type: string
-      food_id:
-        type: string
-      food_type:
-        type: string
-      image_url:
-        type: string
-      is_specialty:
-        type: boolean
-      is_vegan:
-        type: boolean
-      is_vegetarian:
-        type: boolean
-      name:
-        type: string
-      popularity_score:
-        type: number
-      price:
-        type: number
-      restaurant:
-        $ref: '#/definitions/model.Restaurant'
-      restaurant_id:
         type: string
     type: object
   model.Todo:
@@ -421,7 +302,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.AccommodationSuggestion'
+                  $ref: '#/definitions/dto.AccommodationsSuggestion'
               type: object
         "400":
           description: Bad Request
@@ -491,7 +372,7 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.RestaurantSuggestion'
+                  $ref: '#/definitions/dto.RestaurantsSuggestion'
               type: object
         "400":
           description: Bad Request
