# backend/internal/dto/travel_suggestion.go
@@ -1,7 +1,5 @@
 package dto
 
-import "skeleton-internship-backend/internal/model"
-
 type TravelPreference struct {
 	Location     string   `json:"location"`
 	TravelStyle  string   `json:"travel_style"`
@@ -16,14 +14,50 @@ type TravelSuggestionResponse struct {
 	IDs []string `json:"ids"`
 }
 
+type ActivitySuggestion struct {
+	ActivityID    string  `json:"activity_id"`
+	DestinationID string  `json:"destination_id"`
+	CategoryID    string  `json:"category_id"`
+	Name          string  `json:"name"`
+	Description   string  `json:"description"`
+	Duration      int     `json:"duration"`
+	Cost          float64 `json:"cost"`
+	ImageURL      string  `json:"image_url"`
+	PlaceID       string  `json:"place_id"`
+}
 type ActivitiesSuggestion struct {
-	Activities []model.Activity `json:"activities"`
+	Activities []ActivitySuggestion `json:"activities"`
 }
 
 type RestaurantSuggestion struct {
-	Restaurants []model.Restaurant `json:"restaurants"`
+	RestaurantID      string  `json:"restaurant_id"`
+	DestinationID     string  `json:"destination_id"`
+	Name              string  `json:"name"`
+	EstablishmentType string  `json:"establishment_type"`
+	CuisineType       string  `json:"cuisine_type"`
+	Description       string  `json:"description"`
+	Address           string  `json:"address"`
+	PriceRange        string  `json:"price_range"`
+	AvgRating         float64 `json:"avg_rating"`
+	OpeningHours      string  `json:"opening_hours"`
+	ImageURL          string  `json:"image_url"`
+}
+type RestaurantsSuggestion struct {
+	Restaurants []RestaurantSuggestion `json:"restaurants"`
 }
 
 type AccommodationSuggestion struct {
-	Accommodations []model.Accommodation `json:"hotels"`
+	AccommodationID string  `json:"accommodation_id"`
+	DestinationID   string  `json:"destination_id"`
+	Name            string  `json:"name"`
+	Type            string  `json:"type"`
+	Address         string  `json:"address"`
+	BookingLink     string  `json:"booking_link"`
+	StarRating      float64 `json:"star_rating"`
+	Description     string  `json:"description"`
+	Amenities       string  `json:"amenities"`
+	ImageURL        string  `json:"image_url"`
+}
+type AccommodationsSuggestion struct {
+	Accommodations []AccommodationSuggestion `json:"accommodations"`
 }
